force-app/main/default/objects/InteractionStatusMappingForTwilio__mdt/InteractionStatusMappingForTwilio__mdt.object-meta.xml
<CustomObject>
    <description>It will store the mappings for Interaction Status and Twilio. </description>
    <label>InteractionStatusMappingForTwilio</label>
    <pluralLabel>InteractionStatusMappingsForTwilio</pluralLabel>
</CustomObject>