force-app/main/default/objects/InteractionStatusMappingForTwilio__mdt/fields/Interaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Status__c</fullName>
    <description>Interaction Status present in Salesforce</description>
    <label>Interaction Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>