force-app/main/default/objects/InteractionStatusMappingForTwilio__mdt/fields/Twilio_Status__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Status__c</fullName>
    <description>Interaction Status received from Twilio</description>
    <label>Twilio Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>